--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -8,12 +8,13 @@
     <allow-intent href="market:*" />
     <name>GeolocationOnBackground</name>
     <description>
-        A sample Apache Cordova application that responds to the deviceready event.
+        Aplicación Móvil para geolocalizar a los técnicos de Izzi Telecom
     </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
+    <author email="contacto@katzesystems.com" href="http://katzesystems.com/">
+        Oscar Mauricio Juarez Soriano
     </author>
-    <content src="index.html" />
+    <content src="/www/index.html" />
+    <icon src="/img/icono.png" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
