--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -13,8 +13,8 @@
     <author email="contacto@katzesystems.com" href="http://katzesystems.com/">
         Oscar Mauricio Juarez Soriano
     </author>
-    <content src="/www/index.html" />
-    <icon src="/img/icono.png" />
+    <content src="www/index.html" />
+    <icon src="img/icono.png" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
