--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -15,6 +15,8 @@
     </author>
     <content src="www/index.html" />
     <icon src="img/icono.png" />
+    <preference name="KeepRunning" value="true" />
+    <preference name="phonegap-version" value="3.1.0" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
