--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -1,22 +1,15 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.katze.glb" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
-    <feature name="Whitelist">
-        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
-        <param name="onload" value="true" />
-    </feature>
     <allow-intent href="market:*" />
     <name>GeolocationOnBackground</name>
     <description>
-        Aplicación Móvil para geolocalizar a los técnicos de Izzi Telecom
+        A sample Apache Cordova application that responds to the deviceready event.
     </description>
-    <author email="contacto@katzesystems.com" href="http://katzesystems.com/">
-        Oscar Mauricio Juarez Soriano
+    <author email="dev@cordova.apache.org" href="http://cordova.io">
+        Apache Cordova Team
     </author>
-    <content src="www/index.html" />
-    <icon src="img/icono.png" />
-    <preference name="KeepRunning" value="true" />
-    <preference name="phonegap-version" value="3.1.0" />
+    <content src="index.html" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
@@ -24,4 +17,8 @@
     <allow-intent href="sms:*" />
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
+    <feature name="Whitelist">
+        <param name="android-package" value="org.apache.cordova.whitelist.WhitelistPlugin" />
+        <param name="onload" value="true" />
+    </feature>
 </widget>
